# luna-sama

./: .gitignore  LICENSE  README.md  requirements.txt  run.sh  run_api_llm.sh  run_api_sovits.sh
gsv/: README.md  service.py
luna/: CMakeLists.txt  README.md
luna/app/: AppConfig.cpp  AppConfig.h  app.rc  emo_tokens.txt  main.cpp  style.qss
luna/backend/: .gitignore  api_spec.md
luna/core/: AudioPlayer.cpp  AudioPlayer.h  BackendClient.cpp  BackendClient.h  EmotionSpriteController.cpp  EmotionSpriteController.h  HttpBackendClient.cpp  HttpBackendClient.h  ModeManager.cpp  ModeManager.h  State.cpp  State.h  Task.h
luna/ui/: CharacterView.cpp  CharacterView.h  IOOverlay.cpp  IOOverlay.h  MainWindow.cpp  MainWindow.h  ModeMenu.cpp  ModeMenu.h
luna/ui/assets/modes/: combined.json
luna/ui/assets/modes/blue/: sum.json  sum.txt
luna/ui/assets/modes/casual/: sum.json  sum.txt
luna/ui/assets/modes/dress/: sum.json  sum.txt
luna/ui/assets/modes/fall/: sum.json  sum.txt
luna/ui/assets/modes/pink/: sum.json  sum.txt
luna/ui/assets/modes/uniform/: sum.json
luna/ui/assets/modes/uniform2/: sum.json  sum.txt
luna_llm/: .gitignore  api.py  requirements.txt
